; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_lfn.c_GetNameType.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_lfn.c_GetNameType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CHAR_COLON = common dso_local global i64 0, align 8
@FILE_83_CI = common dso_local global i32 0, align 4
@FILE_LONG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetNameType(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  %4 = load i64, i64* @CHAR_COLON, align 8
  %5 = load i64*, i64** %3, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp eq i64 %4, %7
  br i1 %8, label %9, label %16

9:                                                ; preds = %1
  %10 = load i64*, i64** %3, align 8
  %11 = call i32 @IsLFNDrive(i64* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %9
  %14 = load i32, i32* @FILE_83_CI, align 4
  store i32 %14, i32* %2, align 4
  br label %25

15:                                               ; preds = %9
  br label %23

16:                                               ; preds = %1
  %17 = load i64*, i64** %3, align 8
  %18 = call i64 @IsFATName(i64* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i32, i32* @FILE_83_CI, align 4
  store i32 %21, i32* %2, align 4
  br label %25

22:                                               ; preds = %16
  br label %23

23:                                               ; preds = %22, %15
  %24 = load i32, i32* @FILE_LONG, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %20, %13
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @IsLFNDrive(i64*) #1

declare dso_local i64 @IsFATName(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
